--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght,YOPQ@100..900,40..300&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Devjobs</title>
   </head>
   <body>
     <div id="root"></div>
